# test-cmake

./: CMakeLists.txt  README.md
test cmake/: CMakeLists.txt  hello.cpp  hello.h  test cmake.cpp  test cmake.h
